Fixed table align

--- a/sito/_static/custom.css
+++ b/sito/_static/custom.css
@@ -65,3 +65,7 @@ blockquote {
   width: auto;
   padding-top: 1em;
 }
+
+table.align-default {
+    text-align: left;
+} 
